--- a/ru.html
+++ b/ru.html
@@ -280,7 +280,7 @@
 		</div>
 	</footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<script src="https://api-maps.yandex.ru/2.1/?apikey=5d58265c-1ab8-4b34-b8ed-f6321718f3c9&lang=ru_RU"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSigjt-97I5iDlFJe22Gqu10RAEMid700&callback=initMap" async></script>
 	<script src="assets/js/script.js"></script>
 </body>
 </html>
