--- a/ru.html
+++ b/ru.html
@@ -34,7 +34,7 @@
 			<div class="nav-panel__container container">
 				<div class="nav-panel__item">
 					<svg class="nav-panel__logo logo">
-                		<use xlink:href="assets/img/sprite.svg#logo" class="test"></use>
+                		<use xlink:href="assets/img/sprite.svg#logo" class="logo"></use>
             		</svg>
 					<a href="" class="nav-panel__location">
 						<svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
