--- a/ru.html
+++ b/ru.html
@@ -37,8 +37,8 @@
                 		<use xlink:href="assets/img/sprite.svg#logo" class="logo"></use>
             		</svg>
 					<a href="" class="nav-panel__location">
-						<svg>
-	                		<use xlink:href="assets/img/sprite.svg#location"></use>
+						<svg class="location">
+	                		<use xlink:href="assets/img/sprite.svg#location" class="location"></use>
 	            		</svg>
 						Наши офисы
 					</a>
@@ -83,13 +83,15 @@
 					</div>
 					<div class="description__img"></div>
 					<div class="description__pagination">
-						<a href="" class="description__link">
+						<a href="" class="description__link arrow">
 							след <svg>
-		                		<use xlink:href="assets/img/sprite.svg#arrow"></use>
+		                		<use xlink:href="assets/img/sprite.svg#arrow" class="arrow"></use>
 		            		</svg>
 						</a>
-						<a href="" class="description__link">
-							<svg width="67" height="24" viewBox="0 0 67 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M66.0607 10.9393C66.6464 11.5251 66.6464 12.4749 66.0607 13.0607L56.5147 22.6066C55.9289 23.1924 54.9792 23.1924 54.3934 22.6066C53.8076 22.0208 53.8076 21.0711 54.3934 20.4853L62.8787 12L54.3934 3.51471C53.8076 2.92893 53.8076 1.97918 54.3934 1.39339C54.9792 0.807607 55.9289 0.807607 56.5147 1.39339L66.0607 10.9393ZM-1.31134e-07 10.5L65 10.5L65 13.5L1.31134e-07 13.5L-1.31134e-07 10.5Z" fill="#C8A35F"/></svg>Назад
+						<a href="" class="description__link arrow">
+							<svg>
+		                		<use xlink:href="assets/img/sprite.svg#arrow" class="arrow"></use>
+		            		</svg>Назад
 						</a>
 					</div>
 				</div>
