--- a/ru.html
+++ b/ru.html
@@ -84,12 +84,12 @@
 					<div class="description__img"></div>
 					<div class="description__pagination">
 						<a href="" class="description__link arrow">
-							след <svg>
+							след <svg class="arrow">
 		                		<use xlink:href="assets/img/sprite.svg#arrow" class="arrow"></use>
 		            		</svg>
 						</a>
-						<a href="" class="description__link arrow">
-							<svg>
+						<a href="" class="description__link">
+							<svg class="arrow">
 		                		<use xlink:href="assets/img/sprite.svg#arrow" class="arrow"></use>
 		            		</svg>Назад
 						</a>
