--- a/ru.html
+++ b/ru.html
@@ -83,7 +83,7 @@
 					</div>
 					<div class="description__img"></div>
 					<div class="description__pagination">
-						<a href="" class="description__link arrow">
+						<a href="" class="description__link">
 							след <svg class="arrow">
 		                		<use xlink:href="assets/img/sprite.svg#arrow" class="arrow"></use>
 		            		</svg>
