--- a/en.html
+++ b/en.html
@@ -19,8 +19,8 @@
 		<header class="nav-panel__header">
 			<div class="nav-panel__container container">
 				<div class="nav-panel__item">
-					 <a href="ru.html" class="nav-panel__lang active">рус</a>
-					 <a href="en.html" class="nav-panel__lang noactive">eng</a>
+					 <a href="ru.html" class="nav-panel__lang">рус</a>
+					 <a href="en.html" class="nav-panel__lang" aria-current="English">eng</a>
 				</div>
 				<div class="nav-panel__item">
 					<a href="tel:880012345675" class="nav-panel__phone phone">8 (800) 123-45-67</a>
