--- a/ru.html
+++ b/ru.html
@@ -19,8 +19,8 @@
 		<header class="nav-panel__header">
 			<div class="nav-panel__container container">
 				<div class="nav-panel__item">
-					 <a href="ru.html" class="nav-panel__lang noactive">рус</a>
-					 <a href="en.html" class="nav-panel__lang active">eng</a>
+					 <a href="ru.html" class="nav-panel__lang" aria-current="Russian">рус</a>
+					 <a href="en.html" class="nav-panel__lang">eng</a>
 				</div>
 				<div class="nav-panel__item">
 					<a href="tel:880012345675" class="nav-panel__phone phone">8 (800) 123-45-67</a>
@@ -45,10 +45,10 @@
 				</div>
 				<div class="nav-panel__item menu">
 					<button class="nav-panel__burger"></button>
-					<a href="#" class="nav-panel__link mobile_hide">услуги</a>
-					<a href="#" class="nav-panel__link mobile_hide">О компании</a>
-					<a href="#" class="nav-panel__link mobile_hide">местоположение</a>
-					<a href="#" class="nav-panel__link mobile_hide">контакты</a>
+					<a href="#services" class="nav-panel__link mobile_hide">услуги</a>
+					<a href="#about-company" class="nav-panel__link mobile_hide">О компании</a>
+					<a href="#map" class="nav-panel__link mobile_hide">местоположение</a>
+					<a href="#contacts" class="nav-panel__link mobile_hide">контакты</a>
 				</div>
 			</div>
 		</div>
@@ -97,47 +97,63 @@
 				</div>
 			</div>
 		</div>
-		<div class="services">
+		<div class="services" id="services">
 			<div class="container">
 				<div class="services__line line"></div>
 				<h2 class="services__title title">услуги</h2>
 				<div class="services__content">
 					<a href="" class="services__item">
-						<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_8_37)"><path d="M28.8926 0.0731982L25.718 1.51816C25.5147 1.61199 25.3271 1.74023 25.1676 1.89974L19.9945 7.07597L2.17947 4.93979C1.85733 4.90226 1.53205 5.01173 1.30374 5.24317L0.312277 6.23463C-0.213166 6.76008 -0.0505287 7.64832 0.628168 7.9517L13.3952 13.6753L9.72958 17.3409H3.32731C3.04583 17.3409 2.77685 17.4535 2.57668 17.6505L2.04186 18.1884C1.51016 18.7201 1.68531 19.6177 2.37339 19.9118L7.77481 22.2262L10.0893 27.6276C10.3833 28.3157 11.284 28.4909 11.8126 27.9592L12.3505 27.4212C12.5507 27.221 12.6602 26.9521 12.6602 26.6706V20.2683L16.3258 16.6027L22.0493 29.3729C22.3527 30.0516 23.2409 30.2142 23.7664 29.6888L24.7578 28.6973C24.9893 28.4659 25.0987 28.1437 25.0612 27.8216L22.9219 10.0066L28.0981 4.83036C28.2577 4.67085 28.3859 4.48632 28.4797 4.27989L29.9247 1.10535C30.2281 0.451642 29.5525 -0.227054 28.8926 0.0731982Z" fill="white"/></g><defs><clipPath id="clip0_8_37"><rect width="30" height="30" fill="white"/></clipPath></defs></svg>
+						<svg class="airplane">
+	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
+	            		</svg>
 						Авиаперевозки
 					</a>
 					<a href="" class="services__item">
-						<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_8_37)"><path d="M28.8926 0.0731982L25.718 1.51816C25.5147 1.61199 25.3271 1.74023 25.1676 1.89974L19.9945 7.07597L2.17947 4.93979C1.85733 4.90226 1.53205 5.01173 1.30374 5.24317L0.312277 6.23463C-0.213166 6.76008 -0.0505287 7.64832 0.628168 7.9517L13.3952 13.6753L9.72958 17.3409H3.32731C3.04583 17.3409 2.77685 17.4535 2.57668 17.6505L2.04186 18.1884C1.51016 18.7201 1.68531 19.6177 2.37339 19.9118L7.77481 22.2262L10.0893 27.6276C10.3833 28.3157 11.284 28.4909 11.8126 27.9592L12.3505 27.4212C12.5507 27.221 12.6602 26.9521 12.6602 26.6706V20.2683L16.3258 16.6027L22.0493 29.3729C22.3527 30.0516 23.2409 30.2142 23.7664 29.6888L24.7578 28.6973C24.9893 28.4659 25.0987 28.1437 25.0612 27.8216L22.9219 10.0066L28.0981 4.83036C28.2577 4.67085 28.3859 4.48632 28.4797 4.27989L29.9247 1.10535C30.2281 0.451642 29.5525 -0.227054 28.8926 0.0731982Z" fill="white"/></g><defs><clipPath id="clip0_8_37"><rect width="30" height="30" fill="white"/></clipPath></defs></svg>
+						<svg class="airplane">
+	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
+	            		</svg>
 						Авиаперевозки
 					</a>
 					<a href="" class="services__item">
-						<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_8_37)"><path d="M28.8926 0.0731982L25.718 1.51816C25.5147 1.61199 25.3271 1.74023 25.1676 1.89974L19.9945 7.07597L2.17947 4.93979C1.85733 4.90226 1.53205 5.01173 1.30374 5.24317L0.312277 6.23463C-0.213166 6.76008 -0.0505287 7.64832 0.628168 7.9517L13.3952 13.6753L9.72958 17.3409H3.32731C3.04583 17.3409 2.77685 17.4535 2.57668 17.6505L2.04186 18.1884C1.51016 18.7201 1.68531 19.6177 2.37339 19.9118L7.77481 22.2262L10.0893 27.6276C10.3833 28.3157 11.284 28.4909 11.8126 27.9592L12.3505 27.4212C12.5507 27.221 12.6602 26.9521 12.6602 26.6706V20.2683L16.3258 16.6027L22.0493 29.3729C22.3527 30.0516 23.2409 30.2142 23.7664 29.6888L24.7578 28.6973C24.9893 28.4659 25.0987 28.1437 25.0612 27.8216L22.9219 10.0066L28.0981 4.83036C28.2577 4.67085 28.3859 4.48632 28.4797 4.27989L29.9247 1.10535C30.2281 0.451642 29.5525 -0.227054 28.8926 0.0731982Z" fill="white"/></g><defs><clipPath id="clip0_8_37"><rect width="30" height="30" fill="white"/></clipPath></defs></svg>
+						<svg class="airplane">
+	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
+	            		</svg>
 						Авиаперевозки
 					</a>
 					<a href="" class="services__item">
-						<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_8_37)"><path d="M28.8926 0.0731982L25.718 1.51816C25.5147 1.61199 25.3271 1.74023 25.1676 1.89974L19.9945 7.07597L2.17947 4.93979C1.85733 4.90226 1.53205 5.01173 1.30374 5.24317L0.312277 6.23463C-0.213166 6.76008 -0.0505287 7.64832 0.628168 7.9517L13.3952 13.6753L9.72958 17.3409H3.32731C3.04583 17.3409 2.77685 17.4535 2.57668 17.6505L2.04186 18.1884C1.51016 18.7201 1.68531 19.6177 2.37339 19.9118L7.77481 22.2262L10.0893 27.6276C10.3833 28.3157 11.284 28.4909 11.8126 27.9592L12.3505 27.4212C12.5507 27.221 12.6602 26.9521 12.6602 26.6706V20.2683L16.3258 16.6027L22.0493 29.3729C22.3527 30.0516 23.2409 30.2142 23.7664 29.6888L24.7578 28.6973C24.9893 28.4659 25.0987 28.1437 25.0612 27.8216L22.9219 10.0066L28.0981 4.83036C28.2577 4.67085 28.3859 4.48632 28.4797 4.27989L29.9247 1.10535C30.2281 0.451642 29.5525 -0.227054 28.8926 0.0731982Z" fill="white"/></g><defs><clipPath id="clip0_8_37"><rect width="30" height="30" fill="white"/></clipPath></defs></svg>
+						<svg class="airplane">
+	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
+	            		</svg>
 						Авиаперевозки
 					</a>
 					<a href="" class="services__item">
-						<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_8_37)"><path d="M28.8926 0.0731982L25.718 1.51816C25.5147 1.61199 25.3271 1.74023 25.1676 1.89974L19.9945 7.07597L2.17947 4.93979C1.85733 4.90226 1.53205 5.01173 1.30374 5.24317L0.312277 6.23463C-0.213166 6.76008 -0.0505287 7.64832 0.628168 7.9517L13.3952 13.6753L9.72958 17.3409H3.32731C3.04583 17.3409 2.77685 17.4535 2.57668 17.6505L2.04186 18.1884C1.51016 18.7201 1.68531 19.6177 2.37339 19.9118L7.77481 22.2262L10.0893 27.6276C10.3833 28.3157 11.284 28.4909 11.8126 27.9592L12.3505 27.4212C12.5507 27.221 12.6602 26.9521 12.6602 26.6706V20.2683L16.3258 16.6027L22.0493 29.3729C22.3527 30.0516 23.2409 30.2142 23.7664 29.6888L24.7578 28.6973C24.9893 28.4659 25.0987 28.1437 25.0612 27.8216L22.9219 10.0066L28.0981 4.83036C28.2577 4.67085 28.3859 4.48632 28.4797 4.27989L29.9247 1.10535C30.2281 0.451642 29.5525 -0.227054 28.8926 0.0731982Z" fill="white"/></g><defs><clipPath id="clip0_8_37"><rect width="30" height="30" fill="white"/></clipPath></defs></svg>
+						<svg class="airplane">
+	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
+	            		</svg>
 						Авиаперевозки
 					</a>
 					<a href="" class="services__item">
-						<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_8_37)"><path d="M28.8926 0.0731982L25.718 1.51816C25.5147 1.61199 25.3271 1.74023 25.1676 1.89974L19.9945 7.07597L2.17947 4.93979C1.85733 4.90226 1.53205 5.01173 1.30374 5.24317L0.312277 6.23463C-0.213166 6.76008 -0.0505287 7.64832 0.628168 7.9517L13.3952 13.6753L9.72958 17.3409H3.32731C3.04583 17.3409 2.77685 17.4535 2.57668 17.6505L2.04186 18.1884C1.51016 18.7201 1.68531 19.6177 2.37339 19.9118L7.77481 22.2262L10.0893 27.6276C10.3833 28.3157 11.284 28.4909 11.8126 27.9592L12.3505 27.4212C12.5507 27.221 12.6602 26.9521 12.6602 26.6706V20.2683L16.3258 16.6027L22.0493 29.3729C22.3527 30.0516 23.2409 30.2142 23.7664 29.6888L24.7578 28.6973C24.9893 28.4659 25.0987 28.1437 25.0612 27.8216L22.9219 10.0066L28.0981 4.83036C28.2577 4.67085 28.3859 4.48632 28.4797 4.27989L29.9247 1.10535C30.2281 0.451642 29.5525 -0.227054 28.8926 0.0731982Z" fill="white"/></g><defs><clipPath id="clip0_8_37"><rect width="30" height="30" fill="white"/></clipPath></defs></svg>
+						<svg class="airplane">
+	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
+	            		</svg>
 						Авиаперевозки
 					</a>
 					<a href="" class="services__item">
-						<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_8_37)"><path d="M28.8926 0.0731982L25.718 1.51816C25.5147 1.61199 25.3271 1.74023 25.1676 1.89974L19.9945 7.07597L2.17947 4.93979C1.85733 4.90226 1.53205 5.01173 1.30374 5.24317L0.312277 6.23463C-0.213166 6.76008 -0.0505287 7.64832 0.628168 7.9517L13.3952 13.6753L9.72958 17.3409H3.32731C3.04583 17.3409 2.77685 17.4535 2.57668 17.6505L2.04186 18.1884C1.51016 18.7201 1.68531 19.6177 2.37339 19.9118L7.77481 22.2262L10.0893 27.6276C10.3833 28.3157 11.284 28.4909 11.8126 27.9592L12.3505 27.4212C12.5507 27.221 12.6602 26.9521 12.6602 26.6706V20.2683L16.3258 16.6027L22.0493 29.3729C22.3527 30.0516 23.2409 30.2142 23.7664 29.6888L24.7578 28.6973C24.9893 28.4659 25.0987 28.1437 25.0612 27.8216L22.9219 10.0066L28.0981 4.83036C28.2577 4.67085 28.3859 4.48632 28.4797 4.27989L29.9247 1.10535C30.2281 0.451642 29.5525 -0.227054 28.8926 0.0731982Z" fill="white"/></g><defs><clipPath id="clip0_8_37"><rect width="30" height="30" fill="white"/></clipPath></defs></svg>
+						<svg class="airplane">
+	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
+	            		</svg>
 						Авиаперевозки
 					</a>
 					<a href="" class="services__item">
-						<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_8_37)"><path d="M28.8926 0.0731982L25.718 1.51816C25.5147 1.61199 25.3271 1.74023 25.1676 1.89974L19.9945 7.07597L2.17947 4.93979C1.85733 4.90226 1.53205 5.01173 1.30374 5.24317L0.312277 6.23463C-0.213166 6.76008 -0.0505287 7.64832 0.628168 7.9517L13.3952 13.6753L9.72958 17.3409H3.32731C3.04583 17.3409 2.77685 17.4535 2.57668 17.6505L2.04186 18.1884C1.51016 18.7201 1.68531 19.6177 2.37339 19.9118L7.77481 22.2262L10.0893 27.6276C10.3833 28.3157 11.284 28.4909 11.8126 27.9592L12.3505 27.4212C12.5507 27.221 12.6602 26.9521 12.6602 26.6706V20.2683L16.3258 16.6027L22.0493 29.3729C22.3527 30.0516 23.2409 30.2142 23.7664 29.6888L24.7578 28.6973C24.9893 28.4659 25.0987 28.1437 25.0612 27.8216L22.9219 10.0066L28.0981 4.83036C28.2577 4.67085 28.3859 4.48632 28.4797 4.27989L29.9247 1.10535C30.2281 0.451642 29.5525 -0.227054 28.8926 0.0731982Z" fill="white"/></g><defs><clipPath id="clip0_8_37"><rect width="30" height="30" fill="white"/></clipPath></defs></svg>
+						<svg class="airplane">
+	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
+	            		</svg>
 						Авиаперевозки
 					</a>
 				</div>
 			</div>
 		</div>
-		<div class="about-company">
+		<div class="about-company" id="about-company">
 			<div class="about-company__container container">
 				<div class="about-company__background"></div>
 				<div class="about-company__body">
@@ -172,7 +188,7 @@
 		</div>
 		<div id="map"></div>
 	</main>
-	<footer class="footer">
+	<footer class="footer" id="contacts">
 		<div class="container">
 			<div class="footer__content">
 				<div class="footer__logo logo">
