--- a/en.html
+++ b/en.html
@@ -161,7 +161,7 @@
 						<div class="about-company__line line"></div>
 						<h2 class="about-company__title title">About&nbsp;company</h2>
 						<p class="about-company__text text">
-							Lorem Ipsum&nbsp;&mdash; это текст-&laquo;рыба&raquo;, часто используемый в&nbsp;печати и&nbsp;вэб-дизайне. Lorem Ipsum является стандартной &laquo;рыбой&raquo; для текстов на&nbsp;латинице с&nbsp;начала XVI&nbsp;века. В&nbsp;то&nbsp;время некий безымянный печатник создал большую коллекцию размеров и&nbsp;форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не&nbsp;только успешно пережил без заметных изменений пять веков, но&nbsp;и&nbsp;перешагнул в&nbsp;электронный дизайн.
+							We in the first&nbsp; place in the rating of global companies. deliver &nbsp;cargo without damage: cover the LDPE tape from polyethylene. &nbsp;She turns out&nbsp; elastic&nbsp;like jelly&nbsp;and&nbsp; strong like Newtonian liquid on impact. We hire drivers with at least 5 years of experience&nbsp; and give them a rest between routes - 30 minutes. Twice a year they&nbsp;go to sanatorium. There&nbsp;they&nbsp;are given massages and&nbsp;taught new skills.
 						</p>
 					</div>
 					<div class="about-company__content">
@@ -209,7 +209,7 @@
 		</div>
 	</footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSigjt-97I5iDlFJe22Gqu10RAEMid700&callback=initMap" async></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSigjt-97I5iDlFJe22Gqu10RAEMid700&language=en&callback=initMap" async></script>
 	<script src="assets/js/script.js"></script>
 </body>
 </html>
