--- a/en.html
+++ b/en.html
@@ -1,215 +1,1 @@
-						
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<title>Company - international transportation</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0=">
-	<meta name="description" content="">
-	<meta name="keywords" content="">
-	<meta name="author" content="HelWorld">
-	<meta http-equiv="Сache-Сontrol" content="max-age=2419200, must-revalidate"> <!-- 1 month -->
-	<meta name="robots" content="follow,noindex">
-	<meta name="theme-color" content="red">
-	<link rel="stylesheet" href="assets/css/normalize.css">
-	<link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-	<nav class="nav-panel">
-		<header class="nav-panel__header">
-			<div class="nav-panel__container container">
-				<div class="nav-panel__item">
-					 <a href="ru.html" class="nav-panel__lang">рус</a>
-					 <a href="en.html" class="nav-panel__lang" aria-current="English">eng</a>
-				</div>
-				<div class="nav-panel__item">
-					<a href="tel:880012345675" class="nav-panel__phone phone">8 (800) 123-45-67</a>
-				</div>
-				<div class="nav-panel__item">
-					 <a href="mailto:sales@log.ru" class="nav-panel__mail">sales@log.ru</a>
-				</div>
-			</div>
-		</header>
-		<div class="nav-panel__body">
-			<div class="nav-panel__container container">
-				<div class="nav-panel__item">
-					<svg class="nav-panel__logo logo">
-                		<use xlink:href="assets/img/sprite.svg#logo" class="logo"></use>
-            		</svg>
-					<a href="" class="nav-panel__location">
-						<svg class="location">
-	                		<use xlink:href="assets/img/sprite.svg#location" class="location"></use>
-	            		</svg>
-						Our offices
-					</a>
-				</div>
-				<div class="nav-panel__item menu">
-					<button class="nav-panel__burger"></button>
-					<a href="#" class="nav-panel__link mobile_hide">services</a>
-					<a href="#" class="nav-panel__link mobile_hide">about company</a>
-					<a href="#" class="nav-panel__link mobile_hide">Geolocation</a>
-					<a href="#" class="nav-panel__link mobile_hide">Contacts</a>
-				</div>
-			</div>
-		</div>
-	</nav>
-	<main>
-		<div class="home">
-			<div class="home__container container">
-				<div class="home__content">
-					<h1 class="home__title">Cargo transportation</h1>
-					<p class="home__text text">
-						Transportation large-size cargo in&nbsp;Russia and&nbsp;Europe. Full forwarding, insurance, packing and&nbsp;cargo storage
-					</p>
-				</div>
-			</div>
-		</div>
-		<div class="description">
-			<div class="description__background"></div>
-			<div class="description__background"></div>
-			<div class="container">
-				<div class="description__slider">
-					<div class="description__item">
-						<div class="description__line line"></div>
-						<h2 class="description__title title">
-							Transportation in&nbsp;Europe
-						</h2>
-						<p class="description__text text">
-							EU countries, and&nbsp;also Ukraine, Belarus with&nbsp;all documents.
-						</p>
-						<a href="" class="description__btn">
-							More
-						</a>
-					</div>
-					<div class="description__img"></div>
-					<div class="description__pagination">
-						<a href="" class="description__link">
-							next <svg class="arrow">
-		                		<use xlink:href="assets/img/sprite.svg#arrow" class="arrow"></use>
-		            		</svg>
-						</a>
-						<a href="" class="description__link">
-							<svg class="arrow">
-		                		<use xlink:href="assets/img/sprite.svg#arrow" class="arrow"></use>
-		            		</svg>Back
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="services animation _hide">
-			<div class="container">
-				<div class="services__line line"></div>
-				<h2 class="services__title title">services</h2>
-				<div class="services__content">
-					<a href="" class="services__item">
-						<svg class="airplane">
-	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
-	            		</svg>
-						Air transportation
-					</a>
-					<a href="" class="services__item">
-						<svg class="airplane">
-	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
-	            		</svg>
-						Air transportation
-					</a>
-					<a href="" class="services__item">
-						<svg class="airplane">
-	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
-	            		</svg>
-						Air transportation
-					</a>
-					<a href="" class="services__item">
-						<svg class="airplane">
-	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
-	            		</svg>
-						Air transportation
-					</a>
-					<a href="" class="services__item">
-						<svg class="airplane">
-	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
-	            		</svg>
-						Air transportation
-					</a>
-					<a href="" class="services__item">
-						<svg class="airplane">
-	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
-	            		</svg>
-						Air transportation
-					</a>
-					<a href="" class="services__item">
-						<svg class="airplane">
-	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
-	            		</svg>
-						Air transportation
-					</a>
-					<a href="" class="services__item">
-						<svg class="airplane">
-	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
-	            		</svg>
-						Air transportation
-					</a>
-				</div>
-			</div>
-		</div>
-		<div class="about-company _hide animation">
-			<div class="about-company__container container">
-				<div class="about-company__background"></div>
-				<div class="about-company__body">
-					<div class="about-company__header">
-						<div class="about-company__line line"></div>
-						<h2 class="about-company__title title">About&nbsp;company</h2>
-						<p class="about-company__text text">
-							We in the first&nbsp; place in the rating of global companies. deliver &nbsp;cargo without damage: cover the LDPE tape from polyethylene. &nbsp;She turns out&nbsp; elastic&nbsp;like jelly&nbsp;and&nbsp; strong like Newtonian liquid on impact. We hire drivers with at least 5 years of experience&nbsp; and give them a rest between routes - 30 minutes. Twice a year they&nbsp;go to sanatorium. There&nbsp;they&nbsp;are given massages and&nbsp;taught new skills.
-						</p>
-					</div>
-					<div class="about-company__content">
-						<div class="about-company__item">
-							<h3 class="about-company__number">48</h3>
-							<h4 class="about-company__subtitle">offices</h4>
-							<p class="about-company__subtext">In Europe and St.Petersburg</p>
-						</div>
-						<div class="about-company__item">
-							<h3 class="about-company__number">361</h3>
-							<h4 class="about-company__subtitle">trucks</h4>
-							<p class="about-company__subtext">Volvo, Scania</p>
-						</div>
-						<div class="about-company__img"></div>
-						<div class="about-company__img"></div>
-						<div class="about-company__item">
-							<h3 class="about-company__number">1500</h3>
-							<h4 class="about-company__subtitle">workers</h4>
-							<p class="about-company__subtext">professional</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div id="map" class="_hide animation"></div>
-	</main>
-	<footer class="footer">
-		<div class="container">
-			<div class="footer__content">
-				<div class="footer__logo logo">
-					<svg class="nav-panel__logo logo">
-                		<use xlink:href="assets/img/sprite.svg#logo" class="logo"></use>
-            		</svg>
-				</div>
-				<div class="footer__item">
-					<address class="footer__address">123456, St.Petersburg, Nevsky avenue 127</address>
-					<a href="mailto" class="footer__mail">sales@log.ru</a>
-				</div>
-				<div class="footer__item">
-					<a href="tel:881234456657" class="footer__phone phone">+7 (812) 344-56-65</a>
-					<a href="tel:881235556657" class="footer__phone phone">+7 (812) 355-56-65</a>
-				</div>
-				<p class="footer__copyrite">&copy; HelWorld</p>
-			</div>
-		</div>
-	</footer>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSigjt-97I5iDlFJe22Gqu10RAEMid700&language=en&callback=initMap" async></script>
-	<script src="assets/js/script.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang=en><head><title>Company - international transportation</title><meta charset=utf-8><meta name=viewport content="width=device-width, initial-scale=1.0="><meta name=description content><meta name=keywords content><meta name=author content=HelWorld><meta http-equiv=Сache-Сontrol content="max-age=2419200, must-revalidate"><meta name=robots content=follow,noindex><meta name=theme-color content=red><link rel=stylesheet href=assets/css/normalize.css><link rel=stylesheet href=assets/css/style.css></head><body><nav class=nav-panel><header class=nav-panel__header><div class="nav-panel__container container"><div class=nav-panel__item><a href=ru.html class=nav-panel__lang>рус</a><a href=en.html class=nav-panel__lang aria-current=English>eng</a></div><div class=nav-panel__item><a href=tel:880012345675 class="nav-panel__phone phone">8 (800) 123-45-67</a></div><div class=nav-panel__item><a href=mailto:sales@log.ru class=nav-panel__mail>sales@log.ru</a></div></div></header><div class=nav-panel__body><div class="nav-panel__container container"><div class=nav-panel__item><svg class="nav-panel__logo logo"><use xlink:href=assets/img/sprite.svg#logo class=logo></use></svg><a href class=nav-panel__location><svg class=location><use xlink:href=assets/img/sprite.svg#location class=location></use></svg> Our offices </a></div><div class="nav-panel__item menu"><button class=nav-panel__burger></button><a href=# class="nav-panel__link mobile_hide">services</a><a href=# class="nav-panel__link mobile_hide">about company</a><a href=# class="nav-panel__link mobile_hide">Geolocation</a><a href=# class="nav-panel__link mobile_hide">Contacts</a></div></div></div></nav><main><div class=home><div class="home__container container"><div class=home__content><h1 class=home__title>Cargo transportation</h1><p class="home__text text"> Transportation large-size cargo in&nbsp;Russia and&nbsp;Europe. Full forwarding, insurance, packing and&nbsp;cargo storage </p></div></div></div><div class=description><div class=description__background></div><div class=description__background></div><div class=container><div class=description__slider><div class=description__item><div class="description__line line"></div><h2 class="description__title title"> Transportation in&nbsp;Europe </h2><p class="description__text text"> EU countries, and&nbsp;also Ukraine, Belarus with&nbsp;all documents. </p><a href class=description__btn> More </a></div><div class=description__img></div><div class=description__pagination><a href class=description__link> next <svg class=arrow><use xlink:href=assets/img/sprite.svg#arrow class=arrow></use></svg></a><a href class=description__link><svg class=arrow><use xlink:href=assets/img/sprite.svg#arrow class=arrow></use></svg>Back </a></div></div></div></div><div class="services animation _hide"><div class=container><div class="services__line line"></div><h2 class="services__title title">services</h2><div class=services__content><a href class=services__item><svg class=airplane><use xlink:href=assets/img/sprite.svg#airplane class=airplane></use></svg> Air transportation </a><a href class=services__item><svg class=airplane><use xlink:href=assets/img/sprite.svg#airplane class=airplane></use></svg> Air transportation </a><a href class=services__item><svg class=airplane><use xlink:href=assets/img/sprite.svg#airplane class=airplane></use></svg> Air transportation </a><a href class=services__item><svg class=airplane><use xlink:href=assets/img/sprite.svg#airplane class=airplane></use></svg> Air transportation </a><a href class=services__item><svg class=airplane><use xlink:href=assets/img/sprite.svg#airplane class=airplane></use></svg> Air transportation </a><a href class=services__item><svg class=airplane><use xlink:href=assets/img/sprite.svg#airplane class=airplane></use></svg> Air transportation </a><a href class=services__item><svg class=airplane><use xlink:href=assets/img/sprite.svg#airplane class=airplane></use></svg> Air transportation </a><a href class=services__item><svg class=airplane><use xlink:href=assets/img/sprite.svg#airplane class=airplane></use></svg> Air transportation </a></div></div></div><div class="about-company _hide animation"><div class="about-company__container container"><div class=about-company__background></div><div class=about-company__body><div class=about-company__header><div class="about-company__line line"></div><h2 class="about-company__title title">About&nbsp;company</h2><p class="about-company__text text"> We in the first&nbsp; place in the rating of global companies. deliver &nbsp;cargo without damage: cover the LDPE tape from polyethylene. &nbsp;She turns out&nbsp; elastic&nbsp;like jelly&nbsp;and&nbsp; strong like Newtonian liquid on impact. We hire drivers with at least 5 years of experience&nbsp; and give them a rest between routes - 30 minutes. Twice a year they&nbsp;go to sanatorium. There&nbsp;they&nbsp;are given massages and&nbsp;taught new skills. </p></div><div class=about-company__content><div class=about-company__item><h3 class=about-company__number>48</h3><h4 class=about-company__subtitle>offices</h4><p class=about-company__subtext>In Europe and St.Petersburg</p></div><div class=about-company__item><h3 class=about-company__number>361</h3><h4 class=about-company__subtitle>trucks</h4><p class=about-company__subtext>Volvo, Scania</p></div><div class=about-company__img></div><div class=about-company__img></div><div class=about-company__item><h3 class=about-company__number>1500</h3><h4 class=about-company__subtitle>workers</h4><p class=about-company__subtext>professional</p></div></div></div></div></div><div id=map class="_hide animation"></div></main><footer class=footer><div class=container><div class=footer__content><div class="footer__logo logo"><svg class="nav-panel__logo logo"><use xlink:href=assets/img/sprite.svg#logo class=logo></use></svg></div><div class=footer__item><address class=footer__address>123456, St.Petersburg, Nevsky avenue 127</address><a href=mailto class=footer__mail>sales@log.ru</a></div><div class=footer__item><a href=tel:881234456657 class="footer__phone phone">+7 (812) 344-56-65</a><a href=tel:881235556657 class="footer__phone phone">+7 (812) 355-56-65</a></div><p class=footer__copyrite>&copy; HelWorld</p></div></div></footer><script src=https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js></script><script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSigjt-97I5iDlFJe22Gqu10RAEMid700&language=en&callback=initMap" async></script> <script src=assets/js/script.js></script></body></html>
