--- a/ru.html
+++ b/ru.html
@@ -1,215 +1,1 @@
-						
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-	<title>Company - межнациональные перевозки</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0=">
-	<meta name="description" content="">
-	<meta name="keywords" content="">
-	<meta name="author" content="HelWorld">
-	<meta http-equiv="Сache-Сontrol" content="max-age=2419200, must-revalidate"> <!-- 1 month -->
-	<meta name="robots" content="follow,noindex">
-	<meta name="theme-color" content="red">
-	<link rel="stylesheet" href="assets/css/normalize.css">
-	<link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-	<nav class="nav-panel">
-		<header class="nav-panel__header">
-			<div class="nav-panel__container container">
-				<div class="nav-panel__item">
-					 <a href="ru.html" class="nav-panel__lang" aria-current="Russian">рус</a>
-					 <a href="en.html" class="nav-panel__lang">eng</a>
-				</div>
-				<div class="nav-panel__item">
-					<a href="tel:880012345675" class="nav-panel__phone phone">8 (800) 123-45-67</a>
-				</div>
-				<div class="nav-panel__item">
-					 <a href="mailto:sales@log.ru" class="nav-panel__mail">sales@log.ru</a>
-				</div>
-			</div>
-		</header>
-		<div class="nav-panel__body">
-			<div class="nav-panel__container container">
-				<div class="nav-panel__item">
-					<svg class="nav-panel__logo logo">
-                		<use xlink:href="assets/img/sprite.svg#logo" class="logo"></use>
-            		</svg>
-					<a href="" class="nav-panel__location">
-						<svg class="location">
-	                		<use xlink:href="assets/img/sprite.svg#location" class="location"></use>
-	            		</svg>
-						Наши офисы
-					</a>
-				</div>
-				<div class="nav-panel__item menu">
-					<button class="nav-panel__burger"></button>
-					<a href="#services" class="nav-panel__link mobile_hide">услуги</a>
-					<a href="#about-company" class="nav-panel__link mobile_hide">О компании</a>
-					<a href="#map" class="nav-panel__link mobile_hide">местоположение</a>
-					<a href="#contacts" class="nav-panel__link mobile_hide">контакты</a>
-				</div>
-			</div>
-		</div>
-	</nav>
-	<main>
-		<div class="home">
-			<div class="home__container container">
-				<div class="home__content">
-					<h1 class="home__title">Грузовые перевозки</h1>
-					<p class="home__text text">
-						Перевозка крупногабаритных грузов по&nbsp;России и&nbsp;Европе. Полное экспедирование, страхование, упаковка и&nbsp;хранение грузов
-					</p>
-				</div>
-			</div>
-		</div>
-		<div class="description">
-			<div class="description__background"></div>
-			<div class="description__background"></div>
-			<div class="container">
-				<div class="description__slider">
-					<div class="description__item">
-						<div class="description__line line"></div>
-						<h2 class="description__title title">
-							грузоперевозки по&nbsp;европе
-						</h2>
-						<p class="description__text text">
-							Страны Евросоюза, а&nbsp;также Украина, Белоруссия со&nbsp;всеми документами.
-						</p>
-						<a href="" class="description__btn">
-							подробнее
-						</a>
-					</div>
-					<div class="description__img"></div>
-					<div class="description__pagination">
-						<a href="" class="description__link">
-							след <svg class="arrow">
-		                		<use xlink:href="assets/img/sprite.svg#arrow" class="arrow"></use>
-		            		</svg>
-						</a>
-						<a href="" class="description__link">
-							<svg class="arrow">
-		                		<use xlink:href="assets/img/sprite.svg#arrow" class="arrow"></use>
-		            		</svg>Назад
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="services animation _hide" id="services">
-			<div class="container">
-				<div class="services__line line"></div>
-				<h2 class="services__title title">услуги</h2>
-				<div class="services__content">
-					<a href="" class="services__item">
-						<svg class="airplane">
-	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
-	            		</svg>
-						Авиаперевозки
-					</a>
-					<a href="" class="services__item">
-						<svg class="airplane">
-	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
-	            		</svg>
-						Авиаперевозки
-					</a>
-					<a href="" class="services__item">
-						<svg class="airplane">
-	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
-	            		</svg>
-						Авиаперевозки
-					</a>
-					<a href="" class="services__item">
-						<svg class="airplane">
-	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
-	            		</svg>
-						Авиаперевозки
-					</a>
-					<a href="" class="services__item">
-						<svg class="airplane">
-	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
-	            		</svg>
-						Авиаперевозки
-					</a>
-					<a href="" class="services__item">
-						<svg class="airplane">
-	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
-	            		</svg>
-						Авиаперевозки
-					</a>
-					<a href="" class="services__item">
-						<svg class="airplane">
-	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
-	            		</svg>
-						Авиаперевозки
-					</a>
-					<a href="" class="services__item">
-						<svg class="airplane">
-	                		<use xlink:href="assets/img/sprite.svg#airplane" class="airplane"></use>
-	            		</svg>
-						Авиаперевозки
-					</a>
-				</div>
-			</div>
-		</div>
-		<div class="about-company _hide animation" id="about-company">
-			<div class="about-company__container container">
-				<div class="about-company__background"></div>
-				<div class="about-company__body">
-					<div class="about-company__header">
-						<div class="about-company__line line"></div>
-						<h2 class="about-company__title title">О&nbsp;компании</h2>
-						<p class="about-company__text text">
-							Мы на первом&nbsp; месте в рейтинге мировых компаний. До-&nbsp; ставляем &nbsp; грузы без повреждений: обтягиваем ПВД&laquo;плёнкой&raquo; из полиэтилена. &nbsp;Она получается&nbsp; эластичной,&nbsp;как желе&nbsp;и&nbsp; прочной, как ньютоновская жидкость при ударе. Нанимаем водителей со стажем от 5 лет &nbsp; и даём им отдых между рейсами - 30 минут. Два раза в год они&nbsp;уезжают в санаторий. Там&nbsp;им&nbsp;делают массажи и&nbsp; обучают новым навыкам.
-						</p>
-					</div>
-					<div class="about-company__content">
-						<div class="about-company__item">
-							<h3 class="about-company__number">48</h3>
-							<h4 class="about-company__subtitle">офисов</h4>
-							<p class="about-company__subtext">В Европе и СНГ</p>
-						</div>
-						<div class="about-company__item">
-							<h3 class="about-company__number">361</h3>
-							<h4 class="about-company__subtitle">грузовиков</h4>
-							<p class="about-company__subtext">Volvo, Scania</p>
-						</div>
-						<div class="about-company__img"></div>
-						<div class="about-company__img"></div>
-						<div class="about-company__item">
-							<h3 class="about-company__number">1500</h3>
-							<h4 class="about-company__subtitle">сотрудников</h4>
-							<p class="about-company__subtext">профессионалов</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div id="map" class="_hide animation"></div>
-	</main>
-	<footer class="footer" id="contacts">
-		<div class="container">
-			<div class="footer__content">
-				<div class="footer__logo logo">
-					<svg class="nav-panel__logo logo">
-                		<use xlink:href="assets/img/sprite.svg#logo" class="logo"></use>
-            		</svg>
-				</div>
-				<div class="footer__item">
-					<address class="footer__address">123456, Санкт-Петербург, Невский пр-кт 127</address>
-					<a href="mailto" class="footer__mail">sales@log.ru</a>
-				</div>
-				<div class="footer__item">
-					<a href="tel:881234456657" class="footer__phone phone">+7 (812) 344-56-65</a>
-					<a href="tel:881235556657" class="footer__phone phone">+7 (812) 355-56-65</a>
-				</div>
-				<p class="footer__copyrite">&copy; HelWorld</p>
-			</div>
-		</div>
-	</footer>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSigjt-97I5iDlFJe22Gqu10RAEMid700&language=ru&callback=initMap" async></script>
-	<script src="assets/js/script.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang=ru><head><title>Company - межнациональные перевозки</title><meta charset=utf-8><meta name=viewport content="width=device-width, initial-scale=1.0="><meta name=description content><meta name=keywords content><meta name=author content=HelWorld><meta http-equiv=Сache-Сontrol content="max-age=2419200, must-revalidate"><meta name=robots content=follow,noindex><meta name=theme-color content=red><link rel=stylesheet href=assets/css/normalize.css><link rel=stylesheet href=assets/css/style.css></head><body><nav class=nav-panel><header class=nav-panel__header><div class="nav-panel__container container"><div class=nav-panel__item><a href=ru.html class=nav-panel__lang aria-current=Russian>рус</a><a href=en.html class=nav-panel__lang>eng</a></div><div class=nav-panel__item><a href=tel:880012345675 class="nav-panel__phone phone">8 (800) 123-45-67</a></div><div class=nav-panel__item><a href=mailto:sales@log.ru class=nav-panel__mail>sales@log.ru</a></div></div></header><div class=nav-panel__body><div class="nav-panel__container container"><div class=nav-panel__item><svg class="nav-panel__logo logo"><use xlink:href=assets/img/sprite.svg#logo class=logo></use></svg><a href class=nav-panel__location><svg class=location><use xlink:href=assets/img/sprite.svg#location class=location></use></svg> Наши офисы </a></div><div class="nav-panel__item menu"><button class=nav-panel__burger></button><a href=#services class="nav-panel__link mobile_hide">услуги</a><a href=#about-company class="nav-panel__link mobile_hide">О компании</a><a href=#map class="nav-panel__link mobile_hide">местоположение</a><a href=#contacts class="nav-panel__link mobile_hide">контакты</a></div></div></div></nav><main><div class=home><div class="home__container container"><div class=home__content><h1 class=home__title>Грузовые перевозки</h1><p class="home__text text"> Перевозка крупногабаритных грузов по&nbsp;России и&nbsp;Европе. Полное экспедирование, страхование, упаковка и&nbsp;хранение грузов </p></div></div></div><div class=description><div class=description__background></div><div class=description__background></div><div class=container><div class=description__slider><div class=description__item><div class="description__line line"></div><h2 class="description__title title"> грузоперевозки по&nbsp;европе </h2><p class="description__text text"> Страны Евросоюза, а&nbsp;также Украина, Белоруссия со&nbsp;всеми документами. </p><a href class=description__btn> подробнее </a></div><div class=description__img></div><div class=description__pagination><a href class=description__link> след <svg class=arrow><use xlink:href=assets/img/sprite.svg#arrow class=arrow></use></svg></a><a href class=description__link><svg class=arrow><use xlink:href=assets/img/sprite.svg#arrow class=arrow></use></svg>Назад </a></div></div></div></div><div class="services animation _hide" id=services><div class=container><div class="services__line line"></div><h2 class="services__title title">услуги</h2><div class=services__content><a href class=services__item><svg class=airplane><use xlink:href=assets/img/sprite.svg#airplane class=airplane></use></svg> Авиаперевозки </a><a href class=services__item><svg class=airplane><use xlink:href=assets/img/sprite.svg#airplane class=airplane></use></svg> Авиаперевозки </a><a href class=services__item><svg class=airplane><use xlink:href=assets/img/sprite.svg#airplane class=airplane></use></svg> Авиаперевозки </a><a href class=services__item><svg class=airplane><use xlink:href=assets/img/sprite.svg#airplane class=airplane></use></svg> Авиаперевозки </a><a href class=services__item><svg class=airplane><use xlink:href=assets/img/sprite.svg#airplane class=airplane></use></svg> Авиаперевозки </a><a href class=services__item><svg class=airplane><use xlink:href=assets/img/sprite.svg#airplane class=airplane></use></svg> Авиаперевозки </a><a href class=services__item><svg class=airplane><use xlink:href=assets/img/sprite.svg#airplane class=airplane></use></svg> Авиаперевозки </a><a href class=services__item><svg class=airplane><use xlink:href=assets/img/sprite.svg#airplane class=airplane></use></svg> Авиаперевозки </a></div></div></div><div class="about-company _hide animation" id=about-company><div class="about-company__container container"><div class=about-company__background></div><div class=about-company__body><div class=about-company__header><div class="about-company__line line"></div><h2 class="about-company__title title">О&nbsp;компании</h2><p class="about-company__text text"> Мы на первом&nbsp; месте в рейтинге мировых компаний. До-&nbsp; ставляем &nbsp; грузы без повреждений: обтягиваем ПВД&laquo;плёнкой&raquo; из полиэтилена. &nbsp;Она получается&nbsp; эластичной,&nbsp;как желе&nbsp;и&nbsp; прочной, как ньютоновская жидкость при ударе. Нанимаем водителей со стажем от 5 лет &nbsp; и даём им отдых между рейсами - 30 минут. Два раза в год они&nbsp;уезжают в санаторий. Там&nbsp;им&nbsp;делают массажи и&nbsp; обучают новым навыкам. </p></div><div class=about-company__content><div class=about-company__item><h3 class=about-company__number>48</h3><h4 class=about-company__subtitle>офисов</h4><p class=about-company__subtext>В Европе и СНГ</p></div><div class=about-company__item><h3 class=about-company__number>361</h3><h4 class=about-company__subtitle>грузовиков</h4><p class=about-company__subtext>Volvo, Scania</p></div><div class=about-company__img></div><div class=about-company__img></div><div class=about-company__item><h3 class=about-company__number>1500</h3><h4 class=about-company__subtitle>сотрудников</h4><p class=about-company__subtext>профессионалов</p></div></div></div></div></div><div id=map class="_hide animation"></div></main><footer class=footer id=contacts><div class=container><div class=footer__content><div class="footer__logo logo"><svg class="nav-panel__logo logo"><use xlink:href=assets/img/sprite.svg#logo class=logo></use></svg></div><div class=footer__item><address class=footer__address>123456, Санкт-Петербург, Невский пр-кт 127</address><a href=mailto class=footer__mail>sales@log.ru</a></div><div class=footer__item><a href=tel:881234456657 class="footer__phone phone">+7 (812) 344-56-65</a><a href=tel:881235556657 class="footer__phone phone">+7 (812) 355-56-65</a></div><p class=footer__copyrite>&copy; HelWorld</p></div></div></footer><script src=https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js></script><script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSigjt-97I5iDlFJe22Gqu10RAEMid700&language=ru&callback=initMap" async></script> <script src=assets/js/script.js></script></body></html>
